Fixes footer overlapping body (#46)
Fixes #38

--- a/src/JsonValidate/wwwroot/css/site.css
+++ b/src/JsonValidate/wwwroot/css/site.css
@@ -25,6 +25,7 @@ app {
 
 .content {
     padding-top: 1.1rem;
+    padding-bottom:60px;
 }
 
 
